<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LargeView"
    android:scrollbars="none">

    <LinearLayout
        style="@style/LargeView.Vertical"
        android:gravity="center|top"
        android:paddingEnd="@dimen/dimen_m"
        android:paddingLeft="@dimen/dimen_m"
        android:paddingRight="@dimen/dimen_m"
        android:paddingStart="@dimen/dimen_m">

        <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_m"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_s"
            app:errorTextAppearance="@style/AppTheme.TextInputLayout">

            <com.example.android.inventoryapp.model.TouchableInputEditText
                android:id="@+id/product_name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_input_hint"
                android:inputType="textNoSuggestions|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_s"
            android:text="@string/product_price_input_label"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/price_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dimen_s"
            android:orientation="horizontal">

            <Button
                android:id="@+id/price_minus_button"
                style="@style/SmallButton.Left"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_s"
                android:paddingLeft="@dimen/dimen_s"
                android:paddingRight="@dimen/dimen_s"
                android:paddingStart="@dimen/dimen_s"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                tools:text="0" />

            <Button
                android:id="@+id/price_plus_button"
                style="@style/SmallButton.Right"
                android:text="@string/plus_sign" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_s"
            android:text="@string/product_quantity_input_label"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/quantity_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dimen_s"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quantity_minus_button"
                style="@style/SmallButton.Left"
                android:text="@string/minus_sign" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_s"
                android:paddingLeft="@dimen/dimen_s"
                android:paddingRight="@dimen/dimen_s"
                android:paddingStart="@dimen/dimen_s"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                tools:text="0" />

            <Button
                android:id="@+id/quantity_plus_button"
                style="@style/SmallButton.Right"
                android:text="@string/plus_sign" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_m"
            android:text="@string/supplier_name_input_hint"
            android:textAppearance="?android:textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/supplier_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_s"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/supplier_phone_number_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_m"
            android:text="@string/supplier_phone_number_input_hint"
            android:textAppearance="?android:textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/supplier_phone_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_s"
            android:textAppearance="?android:textAppearanceMedium"
            android:visibility="gone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_s"
            app:errorTextAppearance="@style/AppTheme.TextInputLayout">

            <com.example.android.inventoryapp.model.TouchableInputEditText
                android:id="@+id/supplier_name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name_input_hint"
                android:inputType="textNoSuggestions|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_phone_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/AppTheme.TextInputLayout">

            <com.example.android.inventoryapp.model.TouchableInputEditText
                android:id="@+id/supplier_phone_number_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone_number_input_hint"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/quantity_counter_text_view"
            style="@style/CircularShape"
            android:textSize="@dimen/quantity_counter_text_size"
            tools:text="0" />


        <TextView
            android:id="@+id/call_supplier_text_view"
            style="@style/CircularShape"
            android:drawableTop="@drawable/ic_call"
            android:padding="@dimen/dimen_l"
            android:text="@string/call_supplier_content_description"
            android:textAppearance="?android:textAppearanceLarge"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>